--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "nodemon": "^3.0.1"
+    "express-session": "^1.17.3",
+    "mongoose": "^8.0.1",
+    "nodemon": "^3.0.1",
+    "uuid": "^9.0.1"
   }
 }
